syntax = "proto3";

package com.mlynik.prime.numbers;

service PrimeNumberService {

    rpc GetPrimes (GetPrimesRequest) returns (stream GetPrimesReply) {}
}

message GetPrimesRequest {
    int32 value = 1;
}

message GetPrimesReply {
    oneof result {
        int32 value = 1;
        bool finished = 2;
    }

}